# allele-discovery

./: .gitignore  Dockerfile  LICENSE  README.md  Snakefile  _quarto.yml  environment.yml  justfile  main.nf  nextflow.config  pyproject.toml
assets/: 00-NKG2A_2C_dedup.fasta.fai  24923-vsearch-07-mhc-I.fasta  HLA-A-B-C-E-20bp-pad.fasta  HLA-A-B-C-E-20bp-pad.fasta.fai  HLA-A-B-C-E-F-G-CDS-trimmed.fasta.fai  HLA-A-mRNA-annotation.txt  HLA-A-mRNA.fasta  HLA-A-mRNA.fasta.fai  Mamu-E_ref_consensus.fasta.fai  NKG2A_2C_SVs.fasta  NKG2A_2C_gDNA.fasta.fai  ipd-mhc-mamu-2021-07-09.cdna.fasta  ipd-mhc-mamu-2021-07-09.cdna.fasta.fai  ipd-mhc-mamu-2023-02-10_cleaned.cdna.fasta.fai  ipd-mhc-mamu-2023-02-10_cleaned.gdna.fasta  mamu_orientation_allele.fasta.fai  papio_mhc.cdna.fasta.fai
conf/: publishDirs.config
config/: config.yaml
lib/: Utils.groovy
modules/: awk.nf  bbmap.nf  clustalo.nf  create_genotyping_fasta.nf  exonerate.nf  extract_top_quality.nf  filter_alignments.nf  genotype_table.nf  gff_processing.nf  minimap2.nf  muscle.nf  pacbio.nf  rename_cdna_matched.nf  rename_cluster_seqs.nf  reporting.nf  samtools.nf  seqkit.nf  trim_annotations.nf  validate.nf  vsearch.nf
notebooks/: distance_parsing.py
ref/: 00-NKG2A_2C_dedup.fasta  24923-vsearch-07-mhc-I.fasta.fai  HLA-A-B-C-E-F-G-CDS-trimmed.fasta  Human_NKG2A.fasta  Human_NKG2A.fasta.fai  Mamu-E_ref_consensus.fasta  NKG2A_2C_SVs.fasta.fai  NKG2A_2C_gDNA.fasta  ipd-mhc-mamu-2023-02-10_cleaned.cdna.fasta  ipd-mhc-mamu-2023-02-10_cleaned.gdna.fasta.fai  mafa_nkg2a_n1_orientation_allele.fasta  mafa_nkg2a_n1_orientation_allele.fasta.fai  mamu_orientation_allele.fasta  papio_mhc.cdna.fasta
ref/genome/1/: info.txt  summary.txt
ref/index/1/: chr1_index_k12_c13_b1.block
scripts/: __main__.py  create_genotyping_fasta.py  extract_soft_clipped_contigs.py  genotyping.py  trim_annotations.py
subworkflows/: allele_annotation.nf  cdna_processing.nf  clustering.nf  enrich_amplicons.nf  gdna_processing.nf  genotype_reporting.nf  prepare_genotypes.nf  prepare_sequence_files.nf  workflow_introspection.nf
workflows/: allele_discovery.nf  genotyping.nf  preprocessing.nf
