[project]
authors = [
    { name = "David H. O'Connor", email = "dhoconno@wisc.edu" },
    { name = "Nicholas R. Minor", email = "nrminor@wisc.edu" },
]
dependencies = [
    "biopython>=1.83",
    "pandas>=2.0.3",
    "pysam>=0.22.1",
    "snakemake",
]
description = "A Snakemake workflow for discovering novel alleles with PacBio HiFi reads"
name = "allele-discovery"
requires-python = ">= 3.8"
version = "0.1.0"

[tool.setuptools]
py-modules = ["scripts"]

[build-system]
requires = ["setuptools >= 40.8.0", "cffi >=1.15.0,!=1.17.0"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
allele-discovery = { path = ".", editable = false }

[tool.pixi.dependencies]
pbaa = ">=1.0.3,<2"
samtools = ">=1.20,<2"
bbmap = ">=39.8,<40"
exonerate = ">=2.4.0,<3"
clustalo = ">=1.2.4,<2"
minimap2 = ">=2.1.1,<3"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=0.6.4",
    "mamba>=0.11.3",
    "marimo[sql]>=0.8.14",
    "polars>=1.7.0",
    "ruff",
]
compile-bytecode = true

[project.scripts]
"alleled" = "scripts.__main__:main"
